fix header modification de l'alignement de la flèche pour retour à l'index.html en mode tablette et ordinateur

--- a/main.css
+++ b/main.css
@@ -482,6 +482,9 @@ header i, header i:hover, header i:visited {
        object-fit: cover;
     overflow: visible;
   }
+  header a {
+    top: 50px;
+  }
 }
 #explorer {
   display: flex;
